--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/MinhDuong-cloo/blog#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
@@ -41,9 +42,9 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.1",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.16",
-    "dotenv": "^16.0.1"
+    "nodemon": "^2.0.16"
   }
 }
