add done login frontend

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB_URL= mongodb://localhost:27017/manager
-SECRET_KEY= YOURSECRETKEYGOESHERE
+JWT_ACCESS_KEY=YOURSECRETKEYGOESHERE
+JWT_REFRESH_KEY=YOURSECRETKEYGOESHEREREFRESHTOKEN
 PORT= 3000
