--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "homepage": "https://github.com/MinhDuong-cloo/blog#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "env-cmd": "^10.1.0",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
@@ -40,6 +42,10 @@
     "mongoose-delete": "^0.5.4",
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.30.7",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.13",
     "validator": "^13.7.0"
   },
   "devDependencies": {
