--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL= mongodb://localhost:27017/manager
+MONGODB_URL= mongodb://127.0.0.1/manager
 JWT_ACCESS_KEY=YOURSECRETKEYGOESHERE
 JWT_REFRESH_KEY=YOURSECRETKEYGOESHEREREFRESHTOKEN
 PORT= 3000
